//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "dxos/client.proto";
import "dxos/config.proto";
import "dxos/echo/invitation.proto";
import "dxos/keys.proto";

package dxos.bot;

// TODO(burdon): Rename.
message BotPackageSpecifier {
  oneof kind {
    /// DXN of the bot in the DXNS registry.
    string name = 1;
    string ipfs_cid = 2;
    string local_path = 3;
  }
}

message Bot {
  enum Status { // TODO(burdon): Rename to state.
    /// Bot is stopped.
    STOPPED = 0;
    /// Starting bot process.
    STARTING = 1;
    /// Bot is running.
    RUNNING = 2;
    /// Bot is stopping.
    STOPPING = 3;
    /// Bot is being spawned. Bot factory is downloading the bot bundle and initializing resources.
    SPAWNING = 4;
  }

  string id = 1;
  optional Status status = 2; // TODO: Rename to state.

  /// The state that the bot aims to be in. Can be only either RUNNING or STOPPED.
  optional Status desired_state = 55;
  optional int32 attempts_to_achieve_desired_state = 56;

  optional BotPackageSpecifier package_specifier = 3;
  optional google.protobuf.Timestamp last_start = 4;
  optional dxos.keys.PublicKey party_key = 5;

  message Runtime {
    optional int32 exit_code = 1;
    optional string exit_signal = 2;
    optional string error = 3;
  }

  optional Runtime runtime = 6;
  optional BotReport report = 7;
}

message GetBotsResponse {
  repeated Bot bots = 1;
}

message SpawnBotRequest {
  optional BotPackageSpecifier package = 1;

  /// Invitation for the bot to join the target party.
  optional dxos.echo.invitation.InvitationDescriptor invitation = 2;

  /// Key of the party bot is invited to.
  optional dxos.keys.PublicKey party_key = 3;
}

message SendCommandRequest {
  optional string bot_id = 1;

  optional bytes command = 2;
}

message SendCommandResponse {
  optional bytes response = 1;
}

message GetLogsResponse {
  bytes chunk = 1;
}

message GetLogsRequest {
  string bot_id = 1;
}

message BotReport {
  /// Details of the party the bot was spawned for.
  optional dxos.client.PartyDetails party_details = 1;
}

/// Service that is used by clients to communicate with bot factory.
service BotFactoryService {
  rpc GetBots(google.protobuf.Empty) returns (GetBotsResponse);

  rpc SpawnBot(SpawnBotRequest) returns (Bot);

  // TODO(dmaretskyi): Invitations.

  rpc Start(Bot) returns (Bot);
  rpc Stop(Bot) returns (Bot);
  rpc Remove(Bot) returns (google.protobuf.Empty);
  rpc GetLogs(GetLogsRequest) returns (stream GetLogsResponse);

  // TODO(dmaretskyi): querying metrics/state.

  rpc SendCommand(SendCommandRequest) returns (SendCommandResponse);

  rpc RemoveAll(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message InitializeRequest {
  /// Bot runtime configuration.
  optional dxos.config.Config config = 1;

  /// Invitation for the bot to join the target party.
  optional dxos.echo.invitation.InvitationDescriptor invitation = 2;

  /// ID of the bot.
  optional string id = 3;
}

message StartRequest {
  /// Bot runtime configuration.
  dxos.config.Config config = 1;
}

/// Service that is used by bots communicating with bot factory.
service BotService {
  /// Initialize Client, create profile, and join a party.
  rpc Initialize(InitializeRequest) returns (google.protobuf.Empty);

  /// Start an initialized bot.
  rpc Start(StartRequest) returns (google.protobuf.Empty);

  /// Custom commands sent to the bot factory.
  rpc Command(SendCommandRequest) returns (SendCommandResponse);

  /// Stop the bot.
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);

  /// Send periodic reports of the bot's state.
  rpc StartReporting(google.protobuf.Empty) returns (stream BotReport);
}
